Implements Edit Screen
-Refactors fragment to be reused on edit screen
-Implements edit screen presenter and view interface
-Implements edit screen fragment structure and logic
-Implements menu layout and logic on EditFragment
-Finishes back button and home as up logic on app
-Adds backupId as temporary solution for id not being serialized
-Adds button logic to check address on map
-Adds class to mask birthDateEditText to date format

Signed-off-by: Agnaldo Rodrigues de Carvalho <agnaldo.carvalho@cedrotech.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.list.ListActivity"/>
+        <activity android:name=".ui.edit.EditActivity"/>
 
         <meta-data android:name="DATABASE" android:value="users.db" />
         <meta-data android:name="VERSION" android:value="1" />
